--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h2>Demo JavaScript in Body</h2>
+    <h1>Leader board</h1>
 
-    <p id="demo">A Paragraph</p>
+    <p id="demo">A Paragraph2</p>
 
     <button type="button" onclick="myFunction()">Try it</button>
 
@@ -11,7 +11,7 @@
       function myFunction() {
         document.getElementById("demo").innerHTML = "Paragraph changed.";
       }
-      
+
     </script>
   </body>
 </html>
