--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
 
     <button type="button" onclick="myFunction()">Try it</button>
 
-    <script>
-      function myFunction() {
-        document.getElementById("demo").innerHTML = "Paragraph changed.";
-      }
-
-    </script>
+    <script src="src/main.js"></script>
   </body>
 </html>
