Created base leaderboard

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <body>
     <h1>Leader board</h1>
 
-    <p id="demo">A Paragraph2</p>
+    <table></table>
 
-    <button type="button" onclick="myFunction()">Try it</button>
-
-    <script src="src/main.js"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
