Updated style & moved table body to tbody

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head >
+        <link rel="stylesheet" href="src/css/style.css">
+    </head>
   <body>
-    <h1>Leader board</h1>
+    <h1 id="leaderboard">Leader board</h1>
 
     <table></table>
 
